# DemoIccMAX

./: .gitignore  .gitlab-ci.yml  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  DemoIccMAX-Readme.html  GOVERNANCE.md  LICENSE.md  PROCESS.md  README.md  Readme.md  RefIccMAX-Readme.html  SECURITY.md  build_emsdk.sh  vcpkg.json  wasm_build.sh  wasm_remote_build.sh
.github/workflows/: 1-NaN-Eval-L141.yaml  113-SIPS.yaml  113Patch.yaml  113cov.yaml  113covClang.yaml  113covReport.yaml  1cov.yaml  1covCl.yaml  1lc3.yaml  31cmake.yaml  3wincmaketest.yaml  4cmake.yaml  5cmake.yaml  6cmake.yaml  Awin11-7VC.yaml  B-CI.yaml  CICD-11.yaml  CacheLegacy8.yaml  LICCS2a.yaml  Latest-iccMAX.yaml  PR128-Build.yaml  PR128-CICD-X6.yaml  PR128-Matrix.yaml  PR128-ubu-llvm-scan.yaml  ResDbg.yaml  ResRel.yaml  VCPKG-Ubu-Test.yaml  VCPKG-Ubu-mtx3.yaml  VCPKG-Ubu-mtx9.yaml  VCPKG-XNU-MTX-ALT-Test.yaml  WinDebugStub.yaml  WinProfiles.yaml  XNU-Dumper.yaml  XNU-FUZZ.yaml  XNU-Runner-Checks-Release.yaml  XNU-Runner-Checks.yaml  XNU-SIPS.yaml  XNU-TC-POC.yaml  XNU-TC-pr129.yaml  XNU-issue113.yaml  (+55 more)
IccProfLib/: DoxyGen_Config  DoxyGen_Config_Web  IccApplyBPC.cpp  IccApplyBPC.h  IccArrayBasic.cpp  IccArrayBasic.h  IccArrayFactory.cpp  IccArrayFactory.h  IccCAM.cpp  IccCAM.h  IccCmm.cpp  IccCmm.h  IccCmmSearch.cpp  IccCmmSearch.h  IccConvertUTF.cpp  IccConvertUTF.h  IccDefs.h  IccEncoding.cpp  IccEncoding.h  IccEnvVar.cpp  IccEnvVar.h  IccEval.cpp  IccEval.h  IccIO.cpp  IccIO.h  IccMD5.cpp  IccMD5.h  IccMatrixMath.cpp  IccMatrixMath.h  IccMpeACS.cpp  IccMpeACS.h  IccMpeBasic.cpp  IccMpeBasic.h  IccMpeCalc.cpp  IccMpeCalc.h  IccMpeFactory.cpp  IccMpeFactory.h  IccMpeSpectral.cpp  IccMpeSpectral.h  IccPcc.cpp  (+72 more)
IccProfLib/IccProfLib.xcodeproj/: project.pbxproj
IccXML/: AUTHORS  COPYING  ChangeLog  IccXMLTools  MakeZipFile.bat  Makefile.am  Makefile.in  NEWS  README  SetVersion.bat  aclocal.m4  bootstrap  configure  configure.Proto  configure.ac  configureProto.ac  iccxml.pc.in
IccXML/CmdLine/: Makefile.am  Makefile.in
IccXML/CmdLine/IccFromXml/: CMakeLists.txt  IccFromXml.cpp  IccFromXml_v14.vcxproj  IccFromXml_v14.vcxproj.filters  IccFromXml_v15.vcxproj  IccFromXml_v16.vcxproj  IccFromXml_v19.vcxproj  IccFromXml_v22.vcxproj  IccFromXml_v9.vcproj  Makefile.am  Makefile.in  Readme.md  xnu_build_cmd_IccFromXml.zsh
IccXML/CmdLine/IccFromXml/IccFromXml.xcodeproj/: project.pbxproj
IccXML/CmdLine/IccFromXml/IccFromXml.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IccXML/CmdLine/IccToXml/: CMakeLists.txt  IccToXml.cpp  IccToXml_v14.vcxproj  IccToXml_v14.vcxproj.filters  IccToXml_v15.vcxproj  IccToXml_v16.vcxproj  IccToXml_v19.vcxproj  IccToXml_v22.vcxproj  IccToXml_v9.vcproj  Makefile.am  Makefile.in  Readme.md  stdafx.cpp  xnu_build_cmd_IccToXml.zsh
IccXML/CmdLine/IccToXml/IccToXML.xcodeproj/: project.pbxproj
IccXML/CmdLine/IccToXml/IccToXML.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IccXML/IccLibXML/: DoxyGen_Config  DoxyGen_Config_Web  IccIoXml.cpp  IccIoXml.h  IccLibXMLVer.h  IccLibXML_CRTDLL_v14.vcxproj  IccLibXML_CRTDLL_v14.vcxproj.filters  IccLibXML_CRTDLL_v15.vcxproj  IccLibXML_CRTDLL_v16.vcxproj  IccLibXML_CRTDLL_v19.vcxproj  IccLibXML_CRTDLL_v22.vcxproj  IccLibXML_CRTDLL_v9.vcproj  IccLibXML_v14.vcxproj  IccLibXML_v15.vcxproj  IccLibXML_v16.vcxproj  IccLibXML_v19.vcxproj  IccLibXML_v22.vcxproj  IccLibXML_v9.vcproj  IccMpeXml.cpp  IccMpeXml.h  IccMpeXmlFactory.cpp  IccMpeXmlFactory.h  IccProfileXml.cpp  IccProfileXml.h  IccTagXml.cpp  IccTagXml.h  IccTagXmlFactory.cpp  IccTagXmlFactory.h  IccUtilXml.cpp  IccUtilXml.h  IccXmlConfig.h  MainPage.h  Makefile.am  Makefile.in
IccXML/IccLibXML/IccLibXML.xcodeproj/: project.pbxproj
IccXML/IccLibXML/IccLibXML.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ReadMeFiles/: DemoIccMAX-Readme.html  Readme.md
Testing/: CreateAllProfiles.bat  CreateAllProfiles.sh  Readme.md  RunTests.bat  RunTests.sh
Testing/ApplyDataFiles/: WptChecker-400_10_700.txt  XYZValue.txt  cc_ref-380_5_780.txt  cmyk8bit.txt  cmykFloat.txt  cmykGrayscale.txt  cmykPercent.txt  cmykhues.txt  rgb8bit.txt
Testing/CMYK-3DLUTs/: A0-CMK.txt  A0-CMY.txt  A0-CMYK.txt  A0-CYK.txt  A0-M.txt  A0-MYK.txt  A1-MYK.txt  A2-MYK.txt  A2-Y.txt  CMYK-3DLUTs.xml  CMYK-3DLUTs2.xml
Testing/Calc/: ElevenChanKubelkaMunk.xml  (+6 more)
Tools/CmdLine/IccApplyNamedCmm/: CMakeLists.txt  Makefile.am  Makefile.in  Readme.md  iccApplyNamedCmm.cpp  iccApplyNamedCmm_v14.vcxproj  iccApplyNamedCmm_v14.vcxproj.filters  iccApplyNamedCmm_v15.vcxproj  iccApplyNamedCmm_v16.vcxproj  iccApplyNamedCmm_v16.vcxproj.filters  iccApplyNamedCmm_v19.vcxproj  iccApplyNamedCmm_v22.vcxproj  iccApplyNamedCmm_v9.vcproj
Tools/CmdLine/IccApplyNamedCmm/DataSetFiles/: cmyk16bit.txt  cmykFloat.txt
Tools/CmdLine/IccApplyNamedCmm/IccApplyNamedCMM.xcodeproj/: project.pbxproj
Tools/CmdLine/IccApplyNamedCmm/IccApplyNamedCMM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tools/CmdLine/IccApplyProfiles/: CMakeLists.txt  Readme.md  TiffImg.cpp  TiffImg.h  iccApplyProfiles.cpp  iccApplyProfiles_v14.vcxproj  iccApplyProfiles_v14.vcxproj.filters  iccApplyProfiles_v15.vcxproj  iccApplyProfiles_v16.vcxproj  iccApplyProfiles_v16.vcxproj.filters  iccApplyProfiles_v19.vcxproj  iccApplyProfiles_v22.vcxproj  iccApplyProfiles_v9.vcproj
Tools/CmdLine/IccApplyProfiles/iccApplyProfiles.xcodeproj/: project.pbxproj
Tools/CmdLine/IccApplyProfiles/iccApplyProfiles.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tools/CmdLine/IccApplySearch/: CMakeLists.txt  Makefile.am  Makefile.in  Readme.md  iccApplySearch.cpp  iccApplySearch_v16.vcxproj  iccApplySearch_v16.vcxproj.filters  pseudocode.txt
Tools/CmdLine/IccApplyToLink/: CMakeLists.txt  Readme.md  iccApplyToLink.cpp  iccApplyToLink_v14.vcxproj  iccApplyToLink_v14.vcxproj.filters  iccApplyToLink_v16.vcxproj  iccApplyToLink_v16.vcxproj.filters  iccApplyToLink_v9.vcproj
Tools/CmdLine/IccApplyToLink/iccApplyToLink.xcodeproj/: project.pbxproj
contrib/: Readme.md
docs/: build.md  index.md
versions/: baseline.json
(+612 files in other folders)
